--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Sorting Methods</title>
-  <link rel="icon" type="image/png" href="favicon.png"/>
-  <link rel="stylesheet" href="build/bundle.css"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
+  <link rel="stylesheet" href="build/bundle.min.css" />
 </head>
-<body>
-</body>
-<script defer src="build/bundle.js"></script>
+<body></body>
+<script defer src="build/bundle.min.js"></script>
 </html>
